--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,6 +23,13 @@ body,
     -ms-overflow-style: none;
     scrollbar-width: none;
   }
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 @layer base {
